--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "element-plus": "^2.7.3",
+    "firebase": "^12.9.0",
     "lucide-vue-next": "^0.378.0",
     "pinia": "^2.1.7",
+    "swiper": "^12.1.0",
     "uuid": "^13.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
